--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,3 +124,6 @@ name = "origin"
 type = "github"
 ignore_token_for_push = false
 insecure = false
+
+[tool.semantic_release.remote.token]
+env = "GITHUB_TOKEN"
