fix: update build-system requirements and add package data configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,14 @@ structlog = [
 ]
 
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.package-data]
+"*" = ["py.typed"]
 
 [tool.ruff]
 include = ["src/**/*.py", "tests/**/*.py"]
