fix: add publish step to release workflow

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -62,3 +62,9 @@ jobs:
         run: uv run semantic-release version
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Publish release
+        run: uv run semantic-release publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
