--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ major_on_zero = true
 allow_zero_version = true
 repo_dir = "."
 no_git_verify = false
+upload_to_pypi = true
 tag_format = "v{version}"
 
 [tool.semantic_release.publish]
