fix: update package name from charlabs-pylib-logging to charlabs-logging in README and pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "charlabs-pylib-logging"
+name = "charlabs-logging"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
