fix: add contents permission to release job in workflow

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -43,6 +43,7 @@ jobs:
       url: https://pypi.org/p/charlabs-logging
     permissions:
       id-token: write
+      contents: write
 
     steps:
       - name: Checkout repository
