--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -70,4 +70,4 @@ jobs:
           uv run semantic-release publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+          PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
