--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,9 +1,7 @@
 name: Release
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   code-quality:
@@ -44,6 +42,7 @@ jobs:
     permissions:
       id-token: write
       contents: write
+    if: github.ref == 'refs/heads/main' && github.event_name == 'workflow_dispatch'
 
     steps:
       - name: Checkout repository
