--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "pydantic-settings>=2.10.1",
+    "pyyaml>=6.0.2",
 ]
 
 [dependency-groups]
