--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,7 +36,8 @@ jobs:
 
       - name: Setup project
         uses: ./.github/actions/setup-project
-
+      - name: Echo release config
+        run: cat releaserc.toml
       - name: Build
         id: version
         env:
